Changed the name of the database objects to *Entities